fix background gradient transition to dark mode

--- a/sass/elements/header.scss
+++ b/sass/elements/header.scss
@@ -1,12 +1,12 @@
 header {
   min-height: 30vh;
   padding-bottom: 30px;
-  //background: linear-gradient(
-  //  to bottom,
-  //  var(--extrem-background-color-50),
-  //  var(--background-color)
-  //);
-  //transition: background-color 200ms;
+  background: linear-gradient(
+    to bottom,
+    var(--extrem-background-color-50),
+    #00000000
+  );
+  transition: background-color 200ms;
 
   h1 {
     padding-top: 60px;
